feat: RoomInfo에서 본인 직업은 보이게 변경