@@ -3,6 +3,7 @@ package mafia.mafiatogether.service.dto;
 import java.sql.Timestamp;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import mafia.mafiatogether.domain.Player;
 import mafia.mafiatogether.domain.Room;
 
@@ -32,19 +33,24 @@ public record RoomInfoResponse(
         );
     }
 
-    private static List<PlayerResponse> convertFrom(final Player player, final Map<String, Player> players) {
-        if (!player.isAlive()) {
-            return players.values().stream()
-                    .map(PlayerResponse::forDead)
-                    .toList();
+    private static List<PlayerResponse> convertFrom(final Player owner, final Map<String, Player> players) {
+        PlayerResponse myJob = PlayerResponse.forMyJob(players.get(owner.getName()));
+        List<PlayerResponse> responses = players.values().stream()
+                .filter(it -> !it.getName().equals(owner.getName()))
+                .map(it -> playerToResponse(owner, it))
+                .collect(Collectors.toList());
+        responses.add(myJob);
+        return responses;
+    }
+
+    private static PlayerResponse playerToResponse(final Player owner, final Player player) {
+        if (!owner.isAlive()) {
+            return PlayerResponse.forDead(player);
         }
-        if (player.isMafia()) {
-            return players.values().stream()
-                    .map(PlayerResponse::forMafia)
-                    .toList();
+        if (owner.isMafia()) {
+            return PlayerResponse.forMafia(player);
         }
-        return players.values().stream()
-                .map(PlayerResponse::forAlive)
-                .toList();
+        return PlayerResponse.forAlive(player);
+
     }
 }
